--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   shared_preferences: ^0.5.10
-  json_serializable: ^3.4.1
+  json_annotation: ^3.0.1
   bloc: ^6.0.3
   flutter_svg: ^0.18.1
 
 dev_dependencies:
-
-
+  json_serializable: ^3.4.1
+  build_runner: ^1.10.1
   flutter_test:
     sdk: flutter
 
@@ -49,6 +49,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/json/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
