--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -36,6 +37,8 @@ dependencies:
 dev_dependencies:
   json_serializable: ^3.4.1
   build_runner: ^1.10.1
+  intl_translation: ^0.17.10+1
+
   flutter_test:
     sdk: flutter
 
